# Mx.RS.SmartSend

./: .gitignore  README.md
remarkable-tools/: Cargo.toml
remarkable-tools/meta/: Cargo.toml
remarkable-tools/meta/src/: main.rs
remarkable-tools/src/: base.rs  main.rs  smart_send.rs  storage.rs
remarkable-tools/wasm/: Cargo.toml
remarkable-tools/wasm/src/: lib.rs
smart-send/: Cargo.toml
smart-send/meta/: Cargo.toml
smart-send/meta/src/: main.rs
smart-send/scenarios/: empty.scen.json
smart-send/src/: smart_send.rs
smart-send/wasm/: Cargo.toml
smart-send/wasm/src/: lib.rs
