[package]
name = "remarkable-tools"
version = "1.0.0"
authors = ["Remarkable Tools"]
edition = "2021"
publish = false

[lib]
path = "src/base.rs"

[dependencies.multiversx-sc]
version = "0.46.1"

[dev-dependencies]
num-bigint = "0.4.2"
hex-literal = "0.3.1"

[dev-dependencies.multiversx-sc-scenario]
version = "0.46.1"
