[package]
name = "smart-send-wasm"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
crate-type = [ "cdylib"]

[dev-dependencies]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.smart-send]
path = ".."

[dependencies.multiversx-sc-wasm-adapter]
version = "0.42.0"

[workspace]
members = [ "."]